--- a/_posts/2016-03-20-preview_of_2_0_0_as_of_2016_03_20.markdown
+++ b/_posts/2016-03-20-preview_of_2_0_0_as_of_2016_03_20.markdown
@@ -2,7 +2,7 @@
 layout: post
 title: "Preview of 2.0.0 as of 2016-03-20"
 date: 2016-03-20
-catagories: news
+catagories: news update
 ---
 _TLDR: There is a preview version that are likely better for you._
 
@@ -33,8 +33,5 @@ Because the 2.0.0 version is already better in many ways:
 
 Screen shot of the new keyboard and game controller friendly menu:<br/>
 <a href="{{ site.url }}/images/blockattack2_menu_2016-03-20_14-30-11.png"><img src="{{ site.url }}/images/blockattack2_menu_2016-03-20_14-30-11_thump.png" alt="Screenshot" border="0"/></a>
-<p/>
-The source can be downloaded here: [Source code](https://github.com/blockattack/blockattack-game/archive/v.2.0.0-SNAPSHOT-2016-03-20.tar.gz){:class="download-link"}<br/>
-<p/>
-A Windows installer can be downloaded here: 
-[Windows installer](https://github.com/blockattack/blockattack-game/releases/download/v.2.0.0-SNAPSHOT-2016-03-20/blockattack-2.0.0-SNAPSHOT-2016-03-20.exe){:class="download-link"}
+<p></p>
+The preview can be downloaded here: [Release page](https://github.com/blockattack/blockattack-game/releases/tag/v.2.0.0-SNAPSHOT-2016-03-20)
