Fixed categories and updated to Jekyll 3.7.0

--- a/_posts/2016-03-20-preview_of_2_0_0_as_of_2016_03_20.markdown
+++ b/_posts/2016-03-20-preview_of_2_0_0_as_of_2016_03_20.markdown
@@ -2,7 +2,7 @@
 layout: post
 title: "Preview of 2.0.0 as of 2016-03-20"
 date: 2016-03-20
-catagories: news update
+categories: news update
 ---
 _TLDR: There is a preview version that are likely better for you._
 
