--- a/_posts/2016-03-20-preview_of_2_0_0_as_of_2016_03_20.markdown
+++ b/_posts/2016-03-20-preview_of_2_0_0_as_of_2016_03_20.markdown
@@ -4,26 +4,26 @@ title: "Preview of 2.0.0 as of 2016-03-20"
 date: 2016-03-20
 categories: news update
 ---
-_TLDR: There is a preview version that are likely better for you._
+_TLDR: There is a preview version that is likely better for you._
 
 The first version of Block Attack - Rise of the Blocks was released back in 2005.
 This is now more than 10 years ago. Back then I did not have the knowledge and experience that I have today.
 
 As many other programmers have thought: "This is too hard to maintain. I'll just scratch it and start over". <br/>
-However that is not so simple. As Joel Spolsky writes in his <a href="http://www.joelonsoftware.com/articles/fog0000000069.html">"Things You Should Never Do, Part I"</a>: That the single biggest mistake you can do is to rewrite code from scratch.
-Rewriting from scratch may give you better code but you are also throwing out a working system and all the lessens learned from it.
+However that is not so simple. As Joel Spolsky writes in his <a href="http://www.joelonsoftware.com/articles/fog0000000069.html">"Things You Should Never Do, Part I"</a>: That the single biggest mistake you can make is to rewrite code from scratch.
+Rewriting from scratch may give you better code but you are also throwing out a working system and all the lessons learned from it.
 
 So instead I have been attacking and refactoring the bad parts of the game.<br/>
-The code have been split into smaller pieces or packed behind an interface layer that I can manage.
+The code has been split into smaller pieces or packed behind an interface layer that I can manage.
 
 There were some things that I had to cut out for the time being.<br/>
-Both the old net code and the replay functionality was "hacked" into the game. They had to go.<br/>
+Both the old net code and the replay functionality were "hacked" into the game. They had to go.<br/>
 The old mouse play function was not done with touch in mind. It had to go too.<br/>
 Game controllers must now be supported by SDL2
 
-The SDL library have been updated from SDL1.2 to SDL2. I must admit that I was about giving up several times while rewriting that.
+The SDL library has been updated from SDL1.2 to SDL2. I must admit that I was about giving up several times while rewriting that.
 
-I want to reintroduce those things gain but I'll rather release often once I have something that most people will consider better.
+I want to reintroduce those things again but I'll rather release often once I have something that most people will consider better.
 
 Because the 2.0.0 version is already better in many ways:
 
